HS-2542 UI fixed to work on smaller screen heights

--- a/css/src/layouts/enquiries-feed/_page-enquiries-feed.sass
+++ b/css/src/layouts/enquiries-feed/_page-enquiries-feed.sass
@@ -3,7 +3,7 @@
     margin: $triple-unit-layout 0 $base-unit-layout
   
   .layout-offset-top
-    $left-nav-width: rem(270px)
+    $left-nav-width: rem(280px)
 
     +clearfix
 
@@ -13,8 +13,9 @@
 
       width: $left-nav-width
       background: $color-grey-25
-      position: fixed
+      position: absolute
       height: 100%
+      overflow-y: scroll
       border-right: 1px solid $color-grey-75
 
       &.active
@@ -114,6 +115,12 @@
             padding: 0
             display: none
 
+            button
+              +border-radius(0)
+
+              border: 0
+              //background: $color-grey-75
+
             ul
               @extend .unstyled
 
@@ -152,6 +159,10 @@
           display: block
 
     .enquiry-actions
+      position: absolute
+      width: 100%
+      height: 100%
+      overflow-y: scroll
       padding-left: $left-nav-width
 
       +respond-to-size($screen-md)
